# QuietPatch

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  INSTALL.md  Makefile  Makefile.ps1  PRODUCTION_READY.md  README-QuickStart.md  README-QuickStart.txt  README-Windows.txt  README.md  README_PATCH.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  RELEASE_SUMMARY.md  SECURITY.md  SHA256SUMS  SHA256SUMS.minisig  SUPPORT_MATRIX.md  THIRD_PARTY_NOTICES.md  VERIFY.md  WINDOWS_BUILD.md  WINDOWS_TESTING_CHECKLIST.md  WINDOWS_USAGE.md  a.csv  a.sarif  bandit.txt  build-windows.bat  build_all.py  build_macos.sh  check_sev.py  constraints.txt  gui.py  index.md  install.ps1  install.sh  (+21 more)
.github/ISSUE_TEMPLATE/: install.yml
.github/workflows/: ci.yml  installer-smoke.yml  nightly-scan.yml  pr-checks.yml  publish-release.yml  python-ci.yml  regenerate-linux-constraints.yml  release-gates.old.yml  release-gates.yml  release-guardrail.yml  release.old.yml  release.yml  security-gates.yml  smoke-install.yml  windows-release-smoke.yml
.venv311/: pyvenv.cfg
.venv312/: pyvenv.cfg
Formula/: quietpatch.rb
_db_raw/: affects.json  aliases.json  cpe_to_cves.json  cve_meta.json  epss.csv  kev.json
assets/: README.md  quietpatch.icns
bucket/: quietpatch.json
catalog/: cpe_to_cves.json
catalog-updater/: main.go
config/: policy.yml  quietpatch.json
constraints/: build-linux-py312.in  build-linux-py312.txt  build-macos-py312.txt  build-windows-py312.in  build-windows-py312.txt  build-windows.in  build.in  linux-extra.in  runtime-linux-py312.txt  runtime-macos-py312.txt  runtime-windows-py312.txt  windows-extra.in
data/: affects.json  scan_results.json  scan_results.json.enc  vuln_log.json.enc
data/cache/: cpe_index.json
docs/: PRODUCTION_DEPLOYMENT.md  QUICK_RELEASE.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_STEPS.md  WINDOWS_BUILD.md  WINDOWS_TESTING.md  index.html  index.md  style.css
examples/: cyclonedx-example.json
gui/: wizard.py
installer/windows/: QuietPatch.iss
keys/: quietpatch-v041.key  quietpatch-v041.pub  quietpatch.key  quietpatch.key.b64  quietpatch.pub
packaging/: README.md  manifest.json  manifest.schema.json
packaging/linux/: README-Linux.txt  create_appimage.sh  install.sh  postinst.sh  prerm.sh  quietpatch.service  quietpatch.timer  run_quietpatch.sh  uninstall.sh
packaging/macos/: README-macOS.txt  create_dmg.sh  mkpkg.sh  run_quietpatch.command
packaging/systemd/: quietpatch.service
policies/: aliases.yml  policy-conservative.yml  policy-critical-only.yml  policy-default.yml  policy.yml
quietpatch/: __init__.py  catalog_updater.py  cli.py  db_loader.py  db_state.py  db_verify.py  errors.py  logging_setup.py
quietpatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
release/: Ops.html  SHA256SUMS  SHA256SUMS.txt  SHA256SUMS.txt.minisig  manifest.json  quietpatch  quietpatch.cmd
report/: __init__.py  html.py
reports/: quietpatch_report.html
samples/: Board.md  README.md
scripts/: build_win_pex.ps1  generate-icons.sh  generate_keys.sh  install.ps1  install.sh  make-release.sh  qa-smoke.sh  release.sh  run_quietpatch.bat  test-release.sh  view_vuln_log.py
src/: cli_main.py
src/core/: actions.py  (+11 more)
tests/: __init__.py  test_aliases.py  test_cpe_resolver.py  test_encryptor_v3.py  test_html.py  test_policy.py  test_rollback.py  test_scanner_helper.py  test_scanner_linux.py  test_scanner_windows.py
tools/: __init__.py  backfill_severity.py  build_all.sh  build_pex.ps1  build_pex.py  build_pex.sh  build_pyz.sh  check_coverage.py  db_snapshot.py  evidence_pack.py  gen_manifest.py  generate_release_notes.sh  generate_winget_manifests.py  install_db_snapshot.sh  make_manifest.py  package_windows.ps1  pre_publish_checks.sh  release_check.sh  release_checklist.sh  rewrap_v3.py  selfcheck.py  sign_release.sh  suggest_aliases.py  test_macos_pkg.sh  test_release_notes.sh  test_windows.ps1
(+58 files in other folders)
