[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quietpatch"
version = "0.2.5"
description = "Vulnerability scanner for installed applications"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "PyYAML==6.0.2",
    "charset-normalizer==3.4.3",
    "requests==2.32.3",
    "cryptography>=42",
]

[project.scripts]
quietpatch = "quietpatch.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "PyYAML==6.0.2",
  "cryptography==43.0.1",
  "cffi>=1.16.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quietpatch*", "src*"]

# ship non-Python assets (HTML/CSS/templates/policies/catalog)
[tool.setuptools.package-data]
quietpatch = [
  "report/templates/**/*",
  "report/static/**/*",
  "catalog/**/*",
  "policies/**/*",
]
"*" = ["*.yml", "*.yaml", "*.json", "*.csv"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E","F","W","I","B","UP"]
exclude = ["dist",".venv",".ruff_cache",".pexroot",".tmp",".tox","build"]

[tool.ruff.format]
quote-style = "double"
