[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quietpatch"
version = "0.3.2"
description = "Vulnerability scanner for installed applications"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "PyYAML>=6.0.2,<7.0.0",
    "charset-normalizer>=3.4.3,<4.0.0",
    "requests>=2.32.3,<2.33.0",
    "cryptography>=42.0.0,<44.0.0",
    "keyring>=25.0.0,<26.0.0",
    "zstandard>=0.22.0,<0.23.0",
]

[project.scripts]
quietpatch = "quietpatch.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "PyYAML==6.0.2",
  "cryptography==43.0.1",
  "cffi>=1.16.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quietpatch*", "src*"]

# ship non-Python assets (HTML/CSS/templates/policies/catalog)
[tool.setuptools.package-data]
quietpatch = [
  "report/templates/**/*",
  "report/static/**/*",
  "catalog/**/*",
  "policies/**/*",
]
"*" = ["*.yml", "*.yaml", "*.json", "*.csv"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E","F","W","I","B","UP"]
exclude = ["dist",".venv",".ruff_cache",".pexroot",".tmp",".tox","build"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.per-file-ignores]
"tools/*.py" = ["W191", "E501", "W293", "B904"]
"quietpatch/report/html.py" = ["E501", "W293", "W291", "B007"]
"quietpatch/report/exports.py" = ["W191", "E501"]
"quietpatch/report/jsonout.py" = ["E501"]
"quietpatch/config/encryptor_v3.py" = ["B904"]
"quietpatch/sbom/cyclonedx.py" = ["W191"]
"quietpatch/commands/*.py" = ["W191"]
"quietpatch/cli.py" = ["E501"]
"quietpatch/config/config_new.py" = ["E501"]
"src/core/actions.py" = ["E501"]
"src/config/config_new.py" = ["E501"]
"src/core/scanner_new.py" = ["E501"]
"src/core/cve_mapper.py" = ["B007"]
"src/core/local_db_resolver.py" = ["E722"]
"src/datafeed/updater.py" = ["UP022"]
"tests/test_encryptor_v3.py" = ["E402"]
"src/config/encryptor_v3.py" = ["B904"]
